change font, fix alignment issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Hind', sans-serif;
+	font-family: 'Mukta Vaani', sans-serif;
 	background-color: #fbfeff;
 	padding-bottom: 30px;
 }
@@ -146,14 +146,9 @@ label {
 
 #control-bar button, #control-bar select, #control-bar input {
 	height: 38px;
-	line-height: normal;
 	margin: 0 2px;
 	min-width: 100px;
 	max-width: 200px;
-}
-
-#control-bar button.btn span {
-	vertical-align: -webkit-baseline-middle;
 }
 
 #fixed {
